# mcp-haskell

./: .claude.md  .ghci  .gitignore  .gitmodules  .mcp.json  CLAUDE_CODE_MCP_WORKAROUND.md  LICENSE  README.md  cabal.project  flake.nix  hls-commands.md  mcp-hls.cabal  result  test_mcp_complete.sh
.cabal-test/: config
.claude/: settings.json
.claude/agents/: haskell-expert.md  log-analyzer.md
.codex/: config.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3ybp8f50z79yjky74xf5iikwx1hbv9ll-source  53jhcwxbvxll80b7v40sih26ggy1a82m-source  7mckg8c37mbr490bh4avhljsi4jx3g5g-source  h35fviz67mhn4xg6karpm51g95bkygwx-source  i9qb72lc72qxyp43p7gg6kh1hw6in7jb-source
.github/workflows/: ci.yml
app/: Main.hs
docs/: mcp-ghcid.md
mcp-sdk-hs/: mcp-sdk-hs.cabal
mcp-sdk-hs/app/: ServerExample.hs
mcp-sdk-hs/lib/MCP/SDK/: Capabilities.hs  Client.hs  Error.hs  Logging.hs  Protocol.hs  Request.hs  Server.hs  Transport.hs  Types.hs
mcp-sdk-hs/lib/MCP/SDK/Server/: API.hs  Auth.hs  Middleware.hs  Monad.hs  State.hs
mcp-sdk-hs/lib/MCP/SDK/Transport/: Stdio.hs
mcp-sdk-hs/lib/MCP/SDK/Types/: Auth.hs
mcp-sdk-hs/lib/Utils/: Logging.hs
mcp-sdk-hs/test/: Spec.hs
scripts/: run-mcp-cabal.sh  run-mcp-ghcid.sh  run-mcp-hls.sh
src/HLS/: Client.hs  Process.hs  Signals.hs
src/MCP/: Protocol.hs  Resources.hs  Types.hs
src/MCP/Tools/: Diagnostics.hs  HLS.hs
src/Utils/: FileSystem.hs  Logging.hs
test/: Main.hs
test-src/MCP/Types/: Simple.hs
test/HLS/: CommandSpec.hs  IntegrationSpec.hs  LSPSpec.hs  SignalHandlingSpec.hs
test/MCP/: FullPipelineSpec.hs  SimpleEndToEndSpec.hs  ToolsSpec.hs
test/Test/: Utils.hs
test/fixtures/: LSPTestModule.hs  TestModule.hs  hie.yaml
test/fixtures/demo-project/: README.md  demo-project.cabal  hie.yaml
test/fixtures/demo-project/Demo/: Advanced.hs  Completions.hs  Diagnostics.hs
test/fixtures/demo-project/bench/: BenchMain.hs
test/fixtures/demo-project/test/: Spec.hs  TestMain.hs
